--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-  SUDHANSHU JOSHI
     *****************
 */
 * {
@@ -186,9 +186,5 @@ section #Info_Cont2 h3 {
 
 }
 */
-/*
-    *****************
-    DONE BY:-   TUMMALA KETHAN
-    *****************
-*/
+
 /*# sourceMappingURL=style.css.map */
